css/components/sections/header.css
header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: fixed;
    right: 0;
    top: 0;
    background-color: var(--color-white);
    border-left: 1px solid var(--color-black);
    height: 100vh;
    width: 10vw;

}

.header__logo-container {
    display: flex;
    position: sticky;
    max-width: 10vw;
}

.logo--image {
    display: flex;
    width: 100%;
}

.nav {
    display: flex;
    flex-direction: column;
    gap: var(--gap-medium);
    justify-items: center;
    margin-top: var(--margin-medium);
}

.nav a {
    color: var(--color-black);
    font-size: var(--heading-medium);
    text-decoration-line: underline;
    text-decoration-thickness: 0.15rem;
    text-decoration-color: rgba(254, 254, 254, 0);
    transition: text-decoration-color 600ms;
}

.symbols svg {
        width: 2rem;
        height: 2rem;
        display: inline-block;
        vertical-align: middle;
    }

nav a:hover {
    text-decoration-color: rgba(0, 0, 0, 1);
}


/* Media queries */
/* Tablet 768px */
@media (min-width: 768px) {
    .logo--image {
        max-width: 5rem;
    }
}

/* Laptop 1024px */
@media (min-width: 1024px) {
    .symbols svg {
        width: 2rem;
        height: 2rem;
        display: inline-block;
        vertical-align: middle;
    }
}


/* Desktop 1440px */
@media (min-width: 1440px) {}

